#10976 폼 디자이너 컴포넌트별 디자인 구현
- 그룹 컴포넌트 하위 여백수정
- datepicker AM/PM 디자인 추가 및 수정

--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -11,7 +11,7 @@
 // 그룹 툴팁
 .#{$common-prefix}group-tooltip {
   position: relative;
-  padding: 0.9375rem; // 15px
+  padding: 0.9375rem 0.9375rem 2.5rem 0.9375rem; // 15px 15px 40px 15px
   @include border(0.0625rem, solid, #D7DBE0, all); // 1px
   @include borderRadius($group-selected-border-radius); // 2px
   background-color: $white;
