--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -87,11 +87,11 @@
                     <div class="flex-row">
                         <div class="flex-column col-6 mr-4">
                             <label th:text="#{notice.label.strtDt}" for="popStrtDt"></label>
-                            <input type="text" id="topNoticeStrtDt" class="z-input date col-pct-12" name="topNoticeStrtDt"/>
+                            <input type="text" id="topNoticeStrtDt" class="z-input i-date-picker date col-pct-12" name="topNoticeStrtDt"/>
                         </div>
                         <div class="flex-column col-6">
                             <label th:text="#{notice.label.endDt}" for="popEndDt"></label>
-                            <input type="text" id="topNoticeEndDt" class="z-input date col-pct-12" name="topNoticeEndDt"/>
+                            <input type="text" id="topNoticeEndDt" class="z-input i-date-picker date col-pct-12" name="topNoticeEndDt"/>
                         </div>
                     </div>
                 </div>
