--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4818,17 +4818,17 @@ table[id=documentDisplay] td {
   flex-direction: row;
   justify-content: center;
   border-bottom: 0.0625rem solid #CFD5D9;
-  padding: 1rem 0 1rem 0;
 }
 .z-picker-modal-content-date {
   display: none;
   width: 19rem;
+  padding: 1rem 0 1rem 0;
 }
 .z-picker-modal-content-date.active {
   display: inline-block;
 }
 .z-picker-modal-content-date.active + div.active {
-  height: 16.5rem;
+  height: 18.5rem;
   border-left: 0.0625rem solid #CFD5D9;
 }
 .z-picker-modal-content-date-months {
@@ -4931,8 +4931,9 @@ table[id=documentDisplay] td {
 }
 .z-picker-modal-content-time {
   display: none;
-  width: 12.5rem;
-  height: 7.375rem;
+  width: 14.6875rem;
+  min-height: 7.375rem;
+  padding: 1rem 0 1rem 0;
   justify-content: center;
 }
 .z-picker-modal-content-time.active {
@@ -4998,40 +4999,44 @@ table[id=documentDisplay] td {
   color: #222529;
   text-align: center;
 }
-.z-picker-modal-content-time .hour-group .digit:hover,
-.z-picker-modal-content-time .minute-group .digit:hover {
-  border-color: #64BBF6;
+.z-picker-modal-content-time .hour-group .digit:hover, .z-picker-modal-content-time .hour-group .digit:focus, .z-picker-modal-content-time .hour-group .digit:active,
+.z-picker-modal-content-time .minute-group .digit:hover,
+.z-picker-modal-content-time .minute-group .digit:focus,
+.z-picker-modal-content-time .minute-group .digit:active {
+  outline: 0;
 }
-.z-picker-modal-content-time .hour-group .digit:focus,
-.z-picker-modal-content-time .minute-group .digit:focus {
-  border-color: #2578CE;
-  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
-  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
-  box-shadow: 0 0 0.125rem 0 #2578CE;
+.z-picker-modal-content-time .hour-group > .digit {
+  border-right: 0.0625rem solid transparent;
+  border-radius: 0.125rem 0 0 0.125rem;
+  -webkit-border-radius: 0.125rem 0 0 0.125rem;
+  -moz-border-radius: 0.125rem 0 0 0.125rem;
 }
-.z-picker-modal-content-time .btn-vertical {
-  padding-left: 0.625rem;
+.z-picker-modal-content-time .minute-group > .digit {
+  border-left: 0.0625rem solid transparent;
+  border-radius: 0 0.125rem 0.125rem 0;
+  -webkit-border-radius: 0 0.125rem 0.125rem 0;
+  -moz-border-radius: 0 0.125rem 0.125rem 0;
 }
-.z-picker-modal-content-time .btn-vertical button {
-  width: 3.75rem;
-  height: 1.875rem;
-  border-radius: 0.0625rem;
-  -webkit-border-radius: 0.0625rem;
-  -moz-border-radius: 0.0625rem;
-  padding: 4px 14px;
+.z-picker-modal-content-time .z-button-toggle-group {
+  padding-left: 0.5rem;
 }
 .z-picker-modal-content-time .separator {
   display: flex;
   flex-direction: column;
+  width: 0.375rem;
+  height: 3.5rem;
+  margin: auto 0;
+  border-top: 0.0625rem solid #CFD5D9;
+  border-bottom: 0.0625rem solid #CFD5D9;
   justify-content: center;
-  width: 2rem;
+  align-items: center;
   font-size: 1.5rem;
   font-weight: 500;
   color: #222529;
 }
 .z-picker-modal-button {
   float: right;
-  margin: 0.75rem 0.6875rem 0.75rem 0;
+  margin: 0.75rem 0.6875rem 0.75rem 0 !important;
 }
 
 /* _text-editor.scss 
@@ -7334,3 +7339,5 @@ body.modal-active {
 .tags-look .tagify__dropdown__item--active {
   color: #505559;
 }
+
+/*# sourceMappingURL=itsm.css.map */
