--- a/src/main/resources/public/scss/document/_modal.scss
+++ b/src/main/resources/public/scss/document/_modal.scss
@@ -109,6 +109,29 @@
         }
       }
     }
+
+    &.custom-code-list {
+      width: 640px;
+      height: 865px;
+
+      .modal-content {
+        height: calc(#{865px} - #{100px} - #{50px});
+        padding: 0.625rem 1.25rem 0.625rem 1.25rem; // 10px 20px 20px 20px
+
+        .field-label {
+          display: inline-block;
+          margin: 1rem 0 0.5rem 0; // 16px 0 8px 0
+        }
+      }
+
+      .input-search {
+        padding-top: 1.875rem; // 30px
+      }
+
+      .custom-code-main {
+        padding-top: 2.5rem; // 40px
+      }
+    }
   }
 }
 
