--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      layout:decorator="layout/popupLayout">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="#{form.label.customCodeTarget}"></title>
     <th:block layout:fragment="scriptLink">
@@ -11,57 +8,29 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="custom-code-content-popup view">
-        <div class="flex-column view-row">
-            <h2 class="popup-title text-ellipsis" th:text="#{form.label.customCodeTarget}"></h2>
+    <div class="flex-column view-row">
+        <div class="radio-list">
+            <ul>
+                <li class="mt-3" name="custom-code-list" th:unless="${#arrays.isEmpty(customCodeDataList)}"
+                    th:each="customCode: ${customCodeDataList}">
+                    <label class="z-radio" th:for="${customCode.key}" tabindex="0">
+                        <input type="radio" name="customCode" th:id="${customCode.key}" th:value="${customCode.value}"/>
+                        <span></span>
+                        <span class="label" th:text="${customCode.value}"></span>
+                    </label>
+                </li>
+                <li id="no-data" th:style="${#arrays.isEmpty(customCodeDataList)} ? '' : 'display: none'">
+                    <span th:text="#{common.msg.noData}"></span>
+                </li>
+            </ul>
         </div>
-        <div class="flex-column view-row">
-            <div class="flex-row justify-content-start">
-                <input class="z-input i-search col-5" type="text" id="search" th:placeholder="#{customCode.msg.enterSearchTerm}">
-            </div>
-        </div>
-        <div class="flex-column view-row">
-            <div class="radio-list">
-                <ul>
-                    <li class="mt-3" th:unless="${#arrays.isEmpty(customCodeDataList)}" th:each="customCode: ${customCodeDataList}">
-                        <label class="z-radio" th:for="${customCode.key}" tabindex="0">
-                            <input type="radio" name="customCode" th:id="${customCode.key}" th:value="${customCode.value}"/>
-                            <span></span>
-                            <span class="label" th:text="${customCode.value}"></span>
-                        </label>
-                    </li>
-                    <li id="no-data" th:style="${#arrays.isEmpty(customCodeDataList)} ? '' : 'display: none'">
-                        <span th:text="#{common.msg.noData}"></span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="itsm-popup-btn-content flex-row view-row justify-content-end">
-            <div class="itsm-popup-button-list">
-                <button class="z-button primary" type="button" th:text="#{common.btn.add}"  onclick="customCodeDataSave();"></button>
-                <button class="z-button secondary" type="button" th:text="#{common.btn.cancel}" onclick="window.close();"></button>
-            </div>
-        </div>
+    </div>
     </div>
 </th:block>
 <th:block layout:fragment="pageScript">
     <script type="text/javascript">
         /*<![CDATA[*/
         let componentData = {};
-        function customCodeDataSave() {
-            let checkElem = document.querySelector('li:not([style*="display: none"]) input:checked');
-            let compDataMap = componentData.componentValue.split('|');
-            let componentDataValue = compDataMap[0] + '|code|' + checkElem.id + '|' + checkElem.value;
-            let componentValue = checkElem.value;
-            if (window.opener && !window.opener.closed) {
-                let component = window.opener.document.getElementById(componentData.componentId);
-                let componentChild =  component.querySelector('input[type="text"]');
-                componentChild.value = componentValue;
-                componentChild.setAttribute('data-custom-data', componentDataValue);
-                componentChild.dispatchEvent(new Event('change'));
-                window.close();
-            }
-        }
 
         window.onload = function() {
             const customCodeData = sessionStorage.getItem(window.name);
@@ -86,7 +55,6 @@
                     document.getElementById('no-data').style.display = 'none';
                 }
             });
-            OverlayScrollbars(document.querySelectorAll('.radio-list'), {className: 'scrollbar'});
         };
         /*]]>*/
     </script>
