--- a/src/main/resources/public/scss/process/_variables.scss
+++ b/src/main/resources/public/scss/process/_variables.scss
@@ -155,6 +155,6 @@ $element-readonly-border-color:               map-get($grays, "line");
 
 //////////////////////////// thumbnail //////////////////////////
 // thumbnail
-$thumbnail-modal-width:                       62.63rem; // 1002px
-$thumbnail-modal-height:                      48.44rem; // 775px
-$thumbnail-main-padding:                      0.625rem; // 10px
+$thumbnail-modal-width:                            1040px; // 1040px
+$thumbnail-modal-height:                           48.44rem; // 775px
+$thumbnail-main-padding:                           0.625rem; // 10px
