--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -270,6 +270,7 @@ $layout-header-height:                       3.125rem; // 50px
 $layout-header-search-font-family:           $font-family-s;
 $layout-header-search-font-size:             $font-size-xs;
 $layout-header-search-color:                 $gray500;
+$layout-header-search-font-weight:           $font-weight-bold;
 
 $layout-properties-width:                    18.75rem; // 300px
 
