--- a/src/main/resources/public/template/process/processAttachFileView.html
+++ b/src/main/resources/public/template/process/processAttachFileView.html
@@ -24,9 +24,9 @@
             </div>
             <div class="thumbnail-modal-body">
                 <div class="z-thumbnail-main flex-row flex-wrap">
-                    <div class="thumbnail" th:unless="${#arrays.isEmpty(imageList)}" th:each="image : ${imageList}" th:data-name="${image.name}" onclick="selectImage(this)">
-                        <div class="thumbnail-img" th:style="'background-image: url(data:image/' + ${image.extension}  + ';base64,' + ${image.data} + ')'"></div>
-                        <div class="thumbnail-info">
+                    <div class="z-thumbnail" th:unless="${#arrays.isEmpty(imageList)}" th:each="image : ${imageList}" th:data-name="${image.name}" onclick="selectImage(this)">
+                        <div class="z-thumbnail-image" th:style="'background-image: url(data:image/' + ${image.extension}  + ';base64,' + ${image.data} + ')'"></div>
+                        <div class="z-thumbnail-info">
                             <p><label th:text="${image.name}"></label></p>
                             <p><label th:text="${image.size}"></label></p>
                             <p><label th:text="${image.width} + ' X ' + ${image.height}"></label></p>
@@ -51,8 +51,9 @@
      *  이미지 선택 후 확인 버튼 클릭시 호출
      */
     function selectedImageSave() {
+        console.log('이거 안타지??')
         // image 미선택 시 알림창 출력
-        const selectedImage = document.querySelector('.thumbnail.selected');
+        const selectedImage = document.querySelector('.z-thumbnail.selected');
         if (!selectedImage) {
             aliceAlert.alertWarning(i18n.msg('form.msg.fileSelect'));
             return false;
@@ -70,7 +71,7 @@
      * 이미지 선택
      */
     function selectImage(thumbnail) {
-        const thumbnails = document.querySelectorAll('.thumbnail');
+        const thumbnails = document.querySelectorAll('.z-thumbnail');
         for (let i = 0, len = thumbnails.length; i < len; i++) {
             thumbnails.item(i).classList.remove('selected');
         }
