--- a/src/main/resources/public/scss/template/_icons.scss
+++ b/src/main/resources/public/scss/template/_icons.scss
@@ -73,4 +73,9 @@
   &.i-image {
     @include maskImage('#{$icon-folder-path}icon_image.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
   }
+
+  // 폴더
+  &.i-folder {
+    @include maskImage('#{$icon-folder-path}icon_folder.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
+  }
 }
