--- a/src/main/resources/public/scss/template/_thumbnail.scss
+++ b/src/main/resources/public/scss/template/_thumbnail.scss
@@ -5,125 +5,112 @@
  * @author Woo Da Jung <wdj@brainz.co.kr>
  * @version 1.0
  */
-.#{$common-prefix} {
-  &thumbnail-main {
-    font-family: $thumbnail-font-family;
-    font-size: $thumbnail-font-size;
-    font-weight: $thumbnail-font-weight;
-    color: $thumbnail-font-color;
-    height: 100%;
-    padding: $thumbnail-main-padding;
-    // 썸네일
-    .thumbnail {
+
+// 레이아웃
+.#{$common-prefix}thumbnail-main {
+  font-family: $thumbnail-font-family;
+  font-size: $thumbnail-font-size;
+  font-weight: $thumbnail-font-weight;
+  color: $thumbnail-font-color;
+  height: 100%;
+  padding: $thumbnail-main-padding;
+
+   // 썸네일
+  .#{$common-prefix}thumbnail {
+    display: inline-block;
+    width: $thumbnail-width;
+    height: $thumbnail-height;
+    margin: 0.625rem; // 10px
+    padding: 0;
+    @include border($thumbnail-border-width, solid, $thumbnail-border-color, all);
+    background-color: $thumbnail-bg-color;
+    cursor: pointer;
+    overflow: hidden;
+
+    &:hover {
+      @include border($thumbnail-border-width, solid, $thumbnail-hover-border-color, all);
+      background-color: $thumbnail-hover-bg-color;
+    }
+
+    &.selected {
+      @include border($thumbnail-selected-border-width, solid, $thumbnail-selected-border-color, all);
+      background-color: $thumbnail-selected-bg-color;
+      @include boxShadow(0, 0, 0.125rem, 0, $thumbnail-selected-box-shadow-color); // 2px
+    }
+    // 썸네일 이미지
+    .#{$common-prefix}thumbnail-image, .#{$common-prefix}thumbnail-file {
       display: inline-block;
-      width: $thumbnail-width;
-      height: $thumbnail-height;
-      margin: 0.625rem; // 10px
-      padding: 0;
-      @include border($thumbnail-border-width, solid, $thumbnail-border-color, all);
-      background-color: $thumbnail-bg-color;
-      cursor: pointer;
-      overflow: hidden;
+      width: 100%;
+      height: 9.063rem; // 145px
+      background-size: auto;
+      background-repeat: no-repeat;
+      background-position: center center;
+    }
+    // 썸네일 정보
+    .#{$common-prefix}thumbnail-info {
+      height: 6.563rem; // 105px
+      padding: 0.75rem 0.9375rem; // 12px 15px
 
-      &:hover {
-        @include border($thumbnail-border-width, solid, $thumbnail-hover-border-color, all);
-        background-color: $thumbnail-hover-bg-color;
-      }
+      .#{$common-prefix}thumbnail-info-text {
+        height: 1.5rem; // 24px
+        line-height: 1.5rem; // 24px
 
-      &.selected {
-        @include border($thumbnail-selected-border-width, solid, $thumbnail-selected-border-color, all);
-        background-color: $thumbnail-selected-bg-color;
-        @include boxShadow(0, 0, 0.125rem, 0, $thumbnail-selected-box-shadow-color); // 2px
-      }
-      // 썸네일 이미지
-      .thumbnail-img, .thumbnail-file {
-        display: inline-block;
-        width: 100%;
-        height: 9.063rem; // 145px
-        background-size: auto;
-        background-repeat: no-repeat;
-        background-position: center center;
-      }
-      // 썸네일 정보
-      .thumbnail-info {
-        height: 6.563rem; // 105px
-        padding: 0.75rem 0.9375rem; // 12px 15px
+        label { display: block; }
 
-        .thumbnail-info-text {
-          height: 1.5rem; // 24px
-          line-height: 1.5rem; // 24px
-
+        &:first-child {
           label {
-            display: block;
-            //font-size: $thumbnail-font-size;
-            //font-weight: $font-weight-medium;
-            //color:  $thumbnail-font-color;
+            color:  $thumbnail-file-name-font-color;
+            font-weight: $thumbnail-file-name-font-weight;
+            cursor: pointer;
           }
-
-          &:first-child {
-            label {
-              color:  $thumbnail-file-name-font-color;
-              font-weight: $thumbnail-file-name-font-weight;
-              cursor: pointer;
-            }
-            // 더블 클릭시 fileName 수정 가능
-            .file-name {
-              display: none;
-              width: 12.19rem; // 195px
-              height: 1.875rem; // 30px
-              float: left;
-            }
-          }
-        }
-      }
-      // 생성일, 삭제 버튼
-      .thumbnail-bottom {
-        height: 2.5rem; // 40px
-        line-height: 2.5rem;
-        @include border($thumbnail-border-width, solid, $thumbnail-border-color, top);
-        padding: 0 0.625rem 0 0.9375rem; // 0 10px 0 15px
-
-        //label {
-          //font-size: $thumbnail-font-size;
-          //font-weight: $font-weight-medium;
-          //color: $thumbnail-font-color;
-        //}
-        // 삭제 버튼
-        .#{$common-prefix}button-icon {
-          padding: 0;
-          height: 2.5rem; // 40px
-
-          .#{$common-prefix}icon {
-            &.i-delete {
-              background: $thumbnail-icon-color;
-            }
+          // 더블 클릭시 fileName 수정 가능
+          .#{$common-prefix}input {
+            display: none;
+            width: 12.19rem; // 195px
+            height: 1.875rem; // 30px
+            float: left;
           }
         }
       }
     }
-    // 썸네일 파일 업로드
-    .thumbnail-upload {
-      display: inline-block;
-      width: $thumbnail-width;
-      height: $thumbnail-height;
-      margin: 0.625rem; // 10px
-      padding: 5.313rem 0 0 0; // 85px
-      @include border($thumbnail-border-width, solid, $thumbnail-border-color, all);
-      box-shadow: none;
-      background-color: $thumbnail-upload-bg-color;
-      cursor: pointer;
-      overflow: hidden;
+    // 생성일, 삭제 버튼
+    .#{$common-prefix}thumbnail-bottom {
+      height: 2.5rem; // 40px
+      line-height: 2.5rem;
+      @include border($thumbnail-border-width, solid, $thumbnail-border-color, top);
+      padding: 0 0.625rem 0 0.9375rem; // 0 10px 0 15px
 
-      &:hover {
-        @include border($thumbnail-border-width, solid, $thumbnail-hover-border-color, all);
-        background-color: $thumbnail-upload-hover-bg-color;
+      // 삭제 버튼
+      .#{$common-prefix}button-icon {
+        padding: 0;
+        height: 2.5rem; // 40px
+
+        .#{$common-prefix}icon {
+          &.i-delete { background: $thumbnail-icon-color; }
+        }
       }
+    }
+  }
+  // 썸네일 파일 업로드
+  .#{$common-prefix}thumbnail-upload {
+    display: inline-block;
+    width: $thumbnail-width;
+    height: $thumbnail-height;
+    margin: 0.625rem; // 10px
+    padding: 5.313rem 0 0 0; // 85px
+    @include border($thumbnail-border-width, solid, $thumbnail-border-color, all);
+    box-shadow: none;
+    background-color: $thumbnail-upload-bg-color;
+    cursor: pointer;
+    overflow: hidden;
 
-      .upload-file-input { display: none; }
+    &:hover {
+      @include border($thumbnail-border-width, solid, $thumbnail-hover-border-color, all);
+      background-color: $thumbnail-upload-hover-bg-color;
     }
   }
   // 아이콘
-  &icon {
+  .#{$common-prefix}icon {
     &.i-image {
       width: 5.313rem; // 85px
       height: 5.313rem;
@@ -133,7 +120,7 @@
     }
   }
   // 데이터 없을 때
-  &thumbnail-nodata {
+  .#{$common-prefix}thumbnail-nodata {
     display: inline-block;
     width: 100%;
     height: 100%;
