--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -31,7 +31,7 @@
 </th:block>
 <th:block layout:fragment="aside">
     <div class="z-aside">
-        <div class="auth-content-edit flex-column">
+        <div class="z-auth-content-edit flex-column">
             <div class="edit-form">
                 <div class="edit-row flex-column">
                     <label th:text="#{auth.label.authId}" class="required"></label>
@@ -406,7 +406,7 @@
                     if (AUTH_DELETE) {
                         disabledButton(responseJson.roleAuthMapCount);
                     }
-                    OverlayScrollbars(document.querySelector('.auth-content-edit'), {className: 'scrollbar'});
+                    OverlayScrollbars(document.querySelector('.z-auth-content-edit'), {className: 'scrollbar'});
                     OverlayScrollbars(document.querySelectorAll('.z-checkbox-list'), {
                         className: 'inner-scrollbar',
                         callbacks: {
