#10889 디자인 - 이미지 관리 화면 : 모달

--- a/src/main/resources/public/template/process/processAttachFileView.html
+++ b/src/main/resources/public/template/process/processAttachFileView.html
@@ -15,6 +15,11 @@
     <script th:src="@{/assets/js/lib/zAlert.js}"></script>
     <script th:src="@{/assets/js/lib/zUtil.js}"></script>
 </head>
+<!--/*
+* 2021-08-10
+* Woo Da Jung
+* 현재 사용되지 않는 메뉴로 판단되나 프로세스 디자이너에서 스크립트 타스크 디자인 변경시 사용될 수 있으므로 우선 그대로 둠
+*/-->
 <body>
     <div class="thumbnail-modal-wrapper">
         <div class="thumbnail-modal-dialog">
